...
            android:textColor="@color/primary_text_light" />

        <Button
                android:text="New Project"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/newProjectButton" />

            <Button
                android:text="Load Project"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/loadMenuButton" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
...
