<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/White" >


    <TextView
        android:background="@color/colorPrimaryDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/createnew_title"
        android:text="Create New Project"
        android:height="60dp"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/edittextname"
        android:hint="Project name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:backgroundTint="#303f9f"
        android:textColor="#000000"
        android:inputType="textCapSentences"
        android:layout_below="@+id/createnew_title"
        android:layout_alignParentStart="true"
        android:layout_marginTop="38dp">
        <requestFocus />

    </EditText>


</RelativeLayout>