...
    </TableRow>


</TableLayout>

    <Button
        android:text="Load"
        android:background="@color/colorPrimary"
        android:textColor="@color/primary_text_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="21dp"
        android:id="@+id/button_loadSelectedProject"
...
